# continuous_csm

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  GenerateProjectFiles.bat  README.md  download_content.py  next_step_research.md  setup.bat
src/: camera.h  gui.cpp  gui.h  main.cpp  model.cpp  model.h  shaders.h  utils.h
